lmao not doing that again

--- a/citations.bib
+++ b/citations.bib
@@ -255,6 +255,7 @@
 }
 
 @unpublished{silver_lecture_nodate,
+	location = {Stanford University},
 	title = {Lecture 2: Markov Decision Processes},
 	url = {https://web.stanford.edu/class/cme241/lecture_slides/david_silver_slides/MDP.pdf},
 	author = {Silver, David},
@@ -265,4 +266,44 @@
 	publisher = {Springer Nature},
 	author = {Bishop, Christopher M and Bishop, Hugh},
 	date = {2023},
+}
+
+@article{williams_simple_1992,
+	title = {Simple statistical gradient-following algorithms for connectionist reinforcement learning},
+	volume = {8},
+	issn = {1573-0565},
+	url = {https://doi.org/10.1007/BF00992696},
+	doi = {10.1007/BF00992696},
+	abstract = {This article presents a general class of associative reinforcement learning algorithms for connectionist networks containing stochastic units. These algorithms, called {REINFORCE} algorithms, are shown to make weight adjustments in a direction that lies along the gradient of expected reinforcement in both immediate-reinforcement tasks and certain limited forms of delayed-reinforcement tasks, and they do this without explicitly computing gradient estimates or even storing information from which such estimates could be computed. Specific examples of such algorithms are presented, some of which bear a close relationship to certain existing algorithms while others are novel but potentially interesting in their own right. Also given are results that show how such algorithms can be naturally integrated with backpropagation. We close with a brief discussion of a number of additional issues surrounding the use of such algorithms, including what is known about their limiting behaviors as well as further considerations that might be used to help develop similar but potentially more powerful reinforcement learning algorithms.},
+	pages = {229--256},
+	number = {3},
+	journaltitle = {Machine Learning},
+	shortjournal = {Machine Learning},
+	author = {Williams, Ronald J.},
+	date = {1992-05-01},
+}
+
+@article{pedregosa_scikit-learn_2011,
+	title = {Scikit-learn: Machine Learning in Python},
+	volume = {12},
+	url = {https://jmlr.csail.mit.edu/papers/v12/pedregosa11a.html},
+	pages = {2825--2830},
+	journaltitle = {Journal of Machine Learning Research},
+	author = {Pedregosa, Fabian and Varoquaux, Gaël and Gramfort, Alexandre and Michel, Vincent and Thirion, Bertrand and Grisel, Olivier and Blondel, Mathieu and Prettenhofer, Peter and Weiss, Ron and Dubourg, Vincent and Vanderplas, Jake and Passos, Alexandre and Cournapeau, David and Brucher, Matthieu and Perrot, Matthieu and Duchesnay, Édouard},
+	date = {2011},
+}
+
+@unpublished{rao_policy_nodate,
+	location = {Stanford University},
+	title = {Policy Gradient Algorithms},
+	url = {https://web.stanford.edu/~ashlearn/RLForFinanceBook/PolicyGradient.pdf},
+	author = {Rao, Ashwin},
+}
+
+@misc{schulman_proximal_2017,
+	title = {Proximal Policy Optimization Algorithms},
+	url = {https://arxiv.org/abs/1707.06347},
+	author = {Schulman, John and Wolski, Filip and Dhariwal, Prafulla and Radford, Alec and Klimov, Oleg},
+	date = {2017},
+	note = {\_eprint: 1707.06347},
 }
